# LangChain-Academy-Langgraph

./: README.md  chat_test.py  complicated_test.py  pyproject.toml  simple_test.py  test.ipynb  test.py  tool_test.py
config/: config.py
models/: model.py
modules/: base.py
notebooks/: 00_chain.ipynb  01_simple_graph.ipynb  02_messages.ipynb  03_tool.ipynb  04_memory.ipynb  05_schema.ipynb  06_summarization.ipynb  07_personalization.ipynb  08_streaming.ipynb  09_human_feedback.ipynb  09_state.ipynb  10_human_feedback.ipynb  11_map_reduce.ipynb  12_map_reduce.ipynb  12_parallelization.ipynb  13_subgraph.ipynb  test.ipynb  해야하는거.txt
notebooks/LangGraph/: 00_simple_graph.ipynb  01_chain.ipynb  01_messages.ipynb  02_agent.ipynb  02_tool.ipynb  03_memory.ipynb  04_schema.ipynb  04_streaming.ipynb  05_summarization.ipynb  06_personalization.ipynb  07_streaming.ipynb  research-assistant.ipynb
notebooks/LangGraph/Module_1_Introduction/: 00_simple_graph.ipynb  01_chain.ipynb  02_agent.ipynb
notebooks/LangGraph/Module_5_Long-Term_Memory/: 02_memory_store.ipynb  05_memory_agent.ipynb  memory_store.ipynb
notebooks/LangGraph/old(module_5)/: 02_memory_store.ipynb
utils/: util.py
