[tool.poetry]
name = "langchain_study_repo"
version = "0.1.0"
description = ""
authors = ["ccw7463 <changwoo7463@gmail.com>"]
readme = "README.md"

# 포함할 패키지 지정
packages = [
    { include = "notebooks", from = "." },
    { include = "public", from = "." },
    { include = "utils", from = "." },
    { include = "modules", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
huggingface-hub = "^0.26.2"
ml-collections = "^1.0.0"
langchain = "^0.3.8"
langgraph = "^0.2.53"
trustcall = "^0.0.26"
langchain-openai = "^0.2.9"
langchain-huggingface = "^0.1.2"
torch = "^2.5.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.14"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
